log
do., 13 de mar. de 2022  4:26:55: 
 tests:  0|7
total_score: 0/70
c9aa740
do., 13 de mar. de 2022 17:56:05: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:41:8: error: 'suma' redeclared as different kind of symbol
    int suma;
        ^~~~
exercises.c:39:48: note: previous definition of 'suma' was here
 void sumaNultimos(int a[], int n, int m, int * suma) {
                                                ^~~~
exercises.c:41:8: error: unused variable 'suma' [-Werror=unused-variable]
    int suma;
        ^~~~
exercises.c:40:8: error: unused variable 'i' [-Werror=unused-variable]
    int i;
        ^
exercises.c: In function 'asignarValor':
exercises.c:87:9: error: incompatible types when assigning to type 'Vector {aka struct <anonymous>}' from type 'int'
    v[i] = valor;
         ^
cc1.exe: all warnings being treated as errors
Compilation failed
d03cee5
do., 13 de mar. de 2022 18:36:38: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'asignarValor':
exercises.c:93:9: error: incompatible types when assigning to type 'Vector {aka struct <anonymous>}' from type 'int'
    v[i] = valor;
         ^
Compilation failed
4fa1d03
do., 13 de mar. de 2022 18:43:09: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'asignarValor':
exercises.c:92:9: error: incompatible types when assigning to type 'Vector {aka struct <anonymous>}' from type 'int'
    v[i] = valor;
         ^
Compilation failed
f40322e
do., 13 de mar. de 2022 18:44:28: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 20/70
dc37d10
do., 13 de mar. de 2022 22:23:36: 
 exercises.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:84:19: error: expected expression before 'int'
    (*vector) = (* int ) malloc (n*sizeof(int));
                   ^~~
exercises.c:84:25: error: expected ';' before 'malloc'
    (*vector) = (* int ) malloc (n*sizeof(int));
                         ^~~~~~
exercises.c:85:11: error: function returns address of local variable [-Werror=return-local-addr]
    return vector;
           ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
916d294
do., 13 de mar. de 2022 22:35:41: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:84:35: error: implicit declaration of function 'sozeof' [-Werror=implicit-function-declaration]
    vector = ( Vector*) malloc(n * sozeof(Vector))
                                   ^~~~~~
exercises.c:84:42: error: expected expression before 'Vector'
    vector = ( Vector*) malloc(n * sozeof(Vector))
                                          ^~~~~~
exercises.c:85:4: error: expected ';' before 'return'
    return vector;
    ^~~~~~
exercises.c:83:12: error: variable 'vector' set but not used [-Werror=unused-but-set-variable]
    Vector *vector;
            ^~~~~~
exercises.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
9bba0ed
do., 13 de mar. de 2022 22:39:18: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:65:8: error: unused variable 'ffd' [-Werror=unused-variable]
    int ffd;
        ^~~
exercises.c: In function 'crearVector':
exercises.c:85:4: error: expected ';' before 'return'
    return vector;
    ^~~~~~
exercises.c:83:12: error: variable 'vector' set but not used [-Werror=unused-but-set-variable]
    Vector *vector;
            ^~~~~~
exercises.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
dde0f82
do., 13 de mar. de 2022 22:39:51: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:65:8: error: unused variable 'ffd' [-Werror=unused-variable]
    int ffd;
        ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
a44162b
do., 13 de mar. de 2022 22:49:32: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:66:11: error: return makes pointer from integer without a cast [-Werror=int-conversion]
    return ffd;
           ^~~
exercises.c:66:11: error: 'ffd' is used uninitialized in this function [-Werror=uninitialized]
    return ffd;
           ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
5b1eab5
do., 13 de mar. de 2022 22:54:52: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
test.c: In function 'crearPersona':
exercises.c:66:6: error: 'i' is used uninitialized in this function [-Werror=uninitialized]
    i = i+1;
    ~~^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2d883c1
do., 13 de mar. de 2022 23:04:26: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
bcc59d7
